style/style.css
@import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');

.max-width {
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
}

/* Sticky Footer based off of CSS-Tricks article*/

html {
    height: 100%;
}

body {
    min-height: 100%;
    display: grid;
    grid-template-rows: 1fr auto;
}

.footer {
    grid-row-start: 2;
    grid-row-end: 3;
  }

/* General */

body {
    background:rgb(236, 236, 236);
}

h1 {
    font-family: 'Rubik';
    margin: .8em 0;
    padding-bottom: .4em;
    border-bottom: 1px solid lightgray;
}

hr {
    margin: 20px 0;
}

/* Nav Changes */
#nav-container {
    background: #212529;
}

/* Portfolio */

.single-project-container {
    display: block;
    position: relative;
    background: #343a40;
    width: 100%;
    border-radius: 3px;
}

.single-project-container figure img {
    max-width: 100%;
    min-height: 100%;
    position: relative;
    opacity: 1;
    transition: opacity 300ms ease;
    line-height: 100%;
    border-radius: 3px;
}

.single-project-container figure figcaption {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 60px;
    text-align: center;
    color: white;
    position: absolute;
    top: 0;
}

.single-project-container figure figcaption h2 {
    opacity: 0;
    transform: translateY(-20px);
    transition: all 300ms ease;
}

.single-project-container figure figcaption p {
    opacity: 0;
    transform: translateY(10px);
    transition: all 300ms ease;
}

.single-project-container:hover figure img {
    opacity: 0;
}

.single-project-container:hover figure figcaption p {
    opacity: 1.0;
    transform: translateY(0);
}

.single-project-container:hover figure figcaption h2 {
    opacity: 1.0;
    transform: translateY(0);
}

.single-project-text {

}

.single-project-mobile-desc {
    padding: 0 10px;
    display: none;
}

/* About page */

#about-photo {
    width: 100%;
    height: auto;
}

/* Contact */

.social-icon {
    transition: all 300ms ease;
}

/* Footer */

#page-content {
    min-height: calc(100vh - 88px);
}

@media screen and (max-width: 768px) {
    #contact-aside {
        text-align: center !important;
        padding: 20px 20%;
    }
    #contact-button {
        width: 100%;
        display: block;
        margin-top: 40px;
    }
}

@media screen and (max-width: 576px) {
    .single-project-container {
        background: none;
    }
    .single-project-container figure figcaption {
        position: static;
        padding: 10px;
    }

    .single-project-container figure img {
        margin: 0 auto;
        display: block;
    }

    .single-project-container figure figcaption h2,
    .single-project-container figure figcaption p {
        opacity: 1;
        transform: translateY(0);
        margin-bottom: 3px;
        text-align: left;
        color: #212529;
        text-decoration: none !important;
    }  
}

